@@ -1,24 +1,56 @@
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.hiddenswitch'
+            artifactId = 'net'
+            version = project.version
+
+            from components.java
+        }
+    }
+}
+
 buildscript {
     repositories {
         mavenCentral()
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
     }
 }
 
+def hazelcastJvmArgs = ["--add-modules", "java.se",
+                        "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+                        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                        "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                        "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+                        "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+
+def localMainClassName = 'com.hiddenswitch.spellsource.applications.LocalClustered'
+
+def debugSystemProperties = ["spellsource.port"                        : "8080",
+                             "spellsource.root.logger.level"           : "DEBUG",
+                             "games.defaultNoActivityTimeout"          : "999999000",
+                             "vertx.logger-delegate-factory-class-name": "io.vertx.core.logging.SLF4JLogDelegateFactory"]
+
 apply plugin: 'application'
+mainClassName = 'com.hiddenswitch.spellsource.applications.Clustered'
 apply plugin: 'com.github.johnrengelman.shadow'
+
+configurations.all {
+    resolutionStrategy {
+        force 'com.hazelcast:hazelcast:3.11'
+        force 'org.apache.commons:commons-lang3:3.5'
+        force 'com.fasterxml.jackson.core:jackson-core:2.9.7'
+        force 'com.fasterxml.jackson.core:annotations:2.9.0'
+        force 'com.fasterxml.jackson.core:databind:2.9.7'
+    }
+}
 
 shadowJar {
     zip64 true
-}
-
-mainClassName = 'com.hiddenswitch.spellsource.applications.Embedded'
-
-configurations {
-    quasar
 }
 
 repositories {
@@ -33,66 +65,72 @@ repositories {
 }
 
 dependencies {
-    quasar files("lib/quasar-core-0.7.9-jdk8.jar")
-
-    compile group: 'com.hazelcast', name: 'hazelcast-aws', version: '2.1.0'
+    compile group: 'com.hazelcast', name: 'hazelcast', version: '3.11'
+    compile group: 'com.hazelcast', name: 'hazelcast-aws', version: '2.3'
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
     compile group: 'com.lambdaworks', name: 'scrypt', version: '1.4.0'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-validator', name: 'commons-validator', version: '1.4.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
-    compile group: 'io.vertx', name: 'vertx-core', version: '3.5.1'
-    compile group: 'com.github.hiddenswitch', name: 'vertx-sync', version: 'master-SNAPSHOT'
-    compile group: 'io.vertx', name: 'vertx-service-discovery', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-mongo-client', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-web', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-auth-common', version: '3.5.1'
-    compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.5.1'
-    compile group: 'com.github.flapdoodle-oss', name: 'de.flapdoodle.embed.mongo', version: 'e5232204c2'
+    compile group: 'io.vertx', name: 'vertx-core', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-mongo-client', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-web-client', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-service-discovery', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-web', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-auth-common', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-rx-java2', version: '3.6.0'
+    compile group: 'io.vertx', name: 'vertx-mail-client', version: '3.6.0'
+    compile group: 'su.nlq', name: 'vertx-prometheus-metrics', version: '3.6.0'
+    compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.7'
+    compile group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '2.0.3'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
     compile group: 'ca.pjer', name: 'logback-awslogs-appender', version: '1.0.0'
-
+    
+    /* Hazelcast Consul discovery support is pretty spotty
+    compile group: 'org.bitsofinfo', name: 'hazelcast-consul-discovery-spi', version: '1.0-RC9'
+    compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.0.3'
+    compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http-hc', version: '3.0.3'
+    */
+    
     compile project(':game')
     compile project(':cards')
     compile project(':client')
+    compile project(':vertx-sync')
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'org.unitils', name: 'unitils-core', version: '3.4.3'
-    testCompile group: 'io.vertx', name: 'vertx-unit', version: '3.5.1'
+    testCompile group: 'io.vertx', name: 'vertx-unit', version: '3.6.0'
     testCompile group: 'io.github.robwin', name: 'assertj-swagger', version: '0.5.0'
     testCompile group: 'org.jboss.resteasy', name: 'resteasy-client', version: '3.1.0.Final'
-    testCompile group: 'javax.websocket', name: 'javax.websocket-client-api', version: '1.1'
-    testCompile group: 'org.glassfish.tyrus', name: 'tyrus-container-grizzly-client', version: '1.13.1'
-    testCompile group: 'org.apache.curator', name: 'curator-test', version: '3.3.0'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    testCompile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.4.9'
+    testCompile group: 'com.neovisionaries', name: 'nv-websocket-client', version: '2.6'
 }
 
 test {
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
-    systemProperty "spellsource.port", "8080"
-    systemProperty "vertx.logger-delegate-factory-class-name", "io.vertx.core.logging.SLF4JLogDelegateFactory"
+    setSystemProperties(debugSystemProperties)
+    setJvmArgs(hazelcastJvmArgs)
     useJUnit()
+    maxParallelForks = 1
+
     testLogging {
-        events "failed"
+        events 'PASSED', 'FAILED', 'SKIPPED'
+    }
+    
+    if (System.properties.containsKey("exclude-tests")) {
+        exclude(System.properties.getProperty("exclude-tests").split(","))
     }
 }
 
 task(runDebug, dependsOn: 'classes', type: JavaExec) {
-    systemProperty "spellsource.port", "8080"
-    systemProperty "spellsource.root.logger.level", "DEBUG"
-    main = 'com.hiddenswitch.spellsource.applications.Embedded'
+    setSystemProperties(debugSystemProperties)
+    main = localMainClassName
+    setJvmArgs(hazelcastJvmArgs + ["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"] as List<String>)
     classpath = sourceSets.main.runtimeClasspath
-    jvmArgs = ["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005", "-javaagent:${configurations.quasar.iterator().next()}=mb"]
 }
 
 task(local, dependsOn: 'classes', type: JavaExec) {
-    systemProperty "spellsource.port", "8080"
-    systemProperty "spellsource.root.logger.level", "DEBUG"
-    main = 'com.hiddenswitch.spellsource.applications.Embedded'
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    setSystemProperties(debugSystemProperties)
+    main = localMainClassName
+    setJvmArgs(hazelcastJvmArgs)
     classpath = sourceSets.main.runtimeClasspath
 }
 
@@ -111,22 +149,8 @@ task(localWindows, dependsOn: 'classes', type: JavaExec) {
         println "  Server is ready."
         println "Otherwise, you will see an error. Make sure mongod is running, as this is the most common mistake you will make."
     }
-    systemProperty "spellsource.port", "8080"
-    systemProperty "mongo.url", "mongodb://localhost:27017"
-    main = 'com.hiddenswitch.spellsource.applications.Embedded'
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
-    classpath = sourceSets.main.runtimeClasspath
-}
-
-task(localCluster, dependsOn: 'classes', type: JavaExec) {
-    doFirst {
-        println "mongod must be running for this task."
-        println "Automatic discovery of Hazelcast hosts is not configured."
-    }
-
-    systemProperty "spellsource.port", "8080"
-    systemProperty "mongo.url", "mongodb://localhost:27017"
-    main = 'com.hiddenswitch.spellsource.applications.TestClustered'
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    setSystemProperties(debugSystemProperties)
+    main = localMainClassName
+    setJvmArgs(hazelcastJvmArgs)
     classpath = sourceSets.main.runtimeClasspath
 }
